// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PortfolioPageInner > connected user view > should render correctly with banner hidden 1`] = `
<div>
  <div
    class="flex items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 flex-col gap-[40px] p-[24px] pt-[0px] w-[100%] max-w-[var(--c-max-w)] relative media-sm:p-[var(--cF-p)]"
    style="--c-max-w: 1200px; --cF-p: 8px;"
  >
    <div
      class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[24px]"
    >
      <div
        data-testid="portfolio-header"
      >
        Portfolio Header Mock
      </div>
      <div
        data-testid="portfolio-content"
      >
        Portfolio Content Mock
      </div>
    </div>
  </div>
</div>
`;

exports[`PortfolioPageInner > connected user view > should render correctly with banner visible 1`] = `
<div>
  <div
    class="flex items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 flex-col gap-[40px] p-[24px] pt-[0px] w-[100%] max-w-[var(--c-max-w)] relative media-sm:p-[var(--cF-p)]"
    style="--c-max-w: 1200px; --cF-p: 8px;"
  >
    <div
      class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[24px]"
    >
      <div
        data-testid="portfolio-header"
      >
        Portfolio Header Mock
      </div>
      <div
        data-testid="portfolio-content"
      >
        Portfolio Content Mock
      </div>
    </div>
  </div>
</div>
`;

exports[`PortfolioPageInner > demo view (disconnected) > should render demo view with bottom margin 1`] = `
<div>
  <div
    class="flex items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 flex-col gap-[40px] mb-[var(--c-mb)] p-[24px] pt-[0px] w-[100%] max-w-[var(--c-max-w)] relative media-sm:p-[var(--cF-p)]"
    style="--c-mb: 100px; --c-max-w: 1200px; --cF-p: 8px;"
  >
    <div
      data-testid="connect-wallet-banner"
    >
      Connect Wallet Banner Mock
    </div>
    <div
      data-testid="connect-wallet-button"
    >
      Connect Wallet Button Mock
    </div>
    <div
      class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[24px]"
    >
      <div
        data-testid="portfolio-header"
      >
        Portfolio Header Mock
      </div>
      <div
        class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 [cursor:not-allowed]"
      >
        <div
          data-disabled="true"
          data-testid="portfolio-content"
        >
          Portfolio Content Mock
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PortfolioPageInner > demo view (disconnected) > should render demo view with connect wallet banner 1`] = `
<div>
  <div
    class="flex items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 flex-col gap-[40px] p-[24px] pt-[0px] w-[100%] max-w-[var(--c-max-w)] relative media-sm:p-[var(--cF-p)]"
    style="--c-max-w: 1200px; --cF-p: 8px;"
  >
    <div
      data-testid="connect-wallet-banner"
    >
      Connect Wallet Banner Mock
    </div>
    <div
      data-testid="connect-wallet-button"
    >
      Connect Wallet Button Mock
    </div>
    <div
      class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[24px]"
    >
      <div
        data-testid="portfolio-header"
      >
        Portfolio Header Mock
      </div>
      <div
        class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 [cursor:not-allowed]"
      >
        <div
          data-disabled="true"
          data-testid="portfolio-content"
        >
          Portfolio Content Mock
        </div>
      </div>
    </div>
  </div>
</div>
`;
